- Add new endpoint /users/me - Remove unused endpoint /users/{userId} - Add tests
